# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

*portage-1.9.0 (16 Apr 2002)

  16 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: portage.py: fetching
  should now try *all* alternate download locations, closing bug #1544. 
  Yay!
  
  15 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: emerge: "emerge R" now
  works correctly, closing bug #1094.
  
  15 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: ebuild.sh: *'s and ?'s in
  DEPEND and SRC_URI syntax should no longer get glob-expanded to files in
  /usr/portage.  This fixes some cryptic bugs.  It also closes bug #1473.
  
  15 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: portage.py: emerge --debug
  now works again.  Closes bug #1437.
  
  15 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: portage.py: moved argument
  check to the beginning of the doebuild() function to prevent "ebuild
  foo.ebuild fart" from causing the md5sums to be checked before recognizing
  that "fart" is not a valid command.  Closes bug #1823.
  
  15 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: portage.py: 'USE="-foo"
  emerge bar' should now work correctly and consistently.  Fixes to the config
  class.  Closes bug #1455.
  
  15 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: portage.py: applied
  jnelson's patch to properly kill all children when interrupted with ^C
  
  15 Apr 2002; Donny Davies <woodchip@gentoo.org>: make.conf: added a
  RESUMECOMMAND for lukemftp.
  
  15 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: portage.py: fixed up some
  "zing" logic inside the merge code (fixing variable being used before
  assignment errors)
  
  15 Apr 2002; Jon Nelson <jnelson@gentoo.org>: src/sandbox/Makefile,
  src/sandbox/problems/Makefile, src/sandbox/problems/sandbox_dev_fd_foo.c,
  src/sandbox/sandbox.c: Cleaned up Makefiles somewhat to take advantage of GNU
  Make, added '/dev/zero' and /dev/fd/' (<- note trailing slash) to the list of